Major Update -Simplified Zoom call (better performance) -Fixed GetTool bug (which could return a broken tool for the player, even if he have a working one) -FixedCast bug -Added possibility to interact with a specific collider of a WorldObject -Added Line of Sight Check -Added Stuck Prevention (from dTormentedSoul) -Added ESP for current gathering options + players -Added Position Pathing Request (for a point instead of unit, etc.) -Added not super cool fix for City Movement ;) -Added Banking -Added using of additional spells in combat while gathering (like Q) -Added option to gather from living mobs also (!experimental!, currently some kind of mobs are not working, like MOB_BOAR (gameName)) -Added looting of killed mobs (no silver, cause yeah..could end in a dead-end for the bot after he dies^^) -Added option to move to target cluster, when it is different from current cluster -Added siege camp treasuring option (!experimental!, the bot will store everything inside the siege camps treasure when above 30%, useful for yellow terretories - only used when inside a siege camp cluster) -Added repositioning behaviour, which will move to an known old position of an harvestableObject (from last hour) if bot can't find anything fore a specific amount of time -Added option to skip unrestricted pvp zones (for gathering inside a cluster, like hellgate spots, and travelling, like red terretories) -Added option to skip keeper packs (mobs with chest for gathering inside a cluster, and travelling - not 100% accurate) -Gatherer will now save preferences between sessions :) -An error inside a gathering method will now trigger a restart of the bot instead of just hanging on the error

--- a/Albion/Merlin/Merlin.csproj
+++ b/Albion/Merlin/Merlin.csproj
@@ -123,11 +123,14 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>LocalPlayerCharacterView.tt</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\Views\LootObjectView.cs" />
+    <Compile Include="Extensions\Views\MobView.cs" />
     <Compile Include="Extensions\Views\MountObjectView.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>MountObjectView.tt</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\Views\SilverObjectView.cs" />
     <Compile Include="Extensions\Views\SimulationObjectView.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -163,6 +166,7 @@
     <Compile Include="Profiles\Gatherer\Gatherer.Bank.cs" />
     <Compile Include="Profiles\Gatherer\Gatherer.Combat.cs" />
     <Compile Include="Profiles\Gatherer\Gatherer.cs" />
+    <Compile Include="Profiles\ESP.cs" />
     <Compile Include="Profiles\Gatherer\Gatherer.Harvest.cs" />
     <Compile Include="Profiles\Gatherer\Gatherer.Search.cs" />
     <Compile Include="Profiles\Gatherer\Gatherer.UI.cs" />
@@ -174,12 +178,15 @@
     <Compile Include="Profiles\Helper\Tier.cs" />
     <Compile Include="Profiles\Helper\TownClusterName.cs" />
     <Compile Include="Profiles\Helper\EnchantmentLevel.cs" />
+    <Compile Include="Profiles\PositionPathingRequest.cs" />
     <Compile Include="Profiles\WorldPathingRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="API\Global.ttinclude" />
     <None Include="packages.config" />
+    <Compile Include="Profiles\Gatherer\Gatherer.Travel.cs" />
+    <Compile Include="Profiles\Gatherer\Gatherer.SiegeCampTreasure.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
